--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,6 @@ spring:
     url: jdbc:h2:tcp://localhost/~/test
     username: sa
     driver-class-name: org.h2.Driver
+  h2:
+    console:
+      enabled: true
